--- a/app/templates/bookingDetail.html
+++ b/app/templates/bookingDetail.html
@@ -149,7 +149,8 @@
             </div>
 
         </div>
-        <div class="col-md-3 col-xs-12 p-1" style="border: 1px solid #1763b7; border-radius: 5px;">
+        <div class="col-md-3 col-xs-12 p-1"
+            style="border: 1px solid #1763b7; border-radius: 5px;">
             <div>
                 <div class="row">
                     <div class="col-md-9 col-xs-12 text-end p-0">
@@ -163,7 +164,8 @@
             </div>
             <hr>
             <div class="mt-3">
-                <h6>Khách lưu trú ở đây thích điều gì? </h6>
+                <h6 class="text-success">Khách lưu trú ở đây thích điều gì?
+                </h6>
                 <!-- Carousel -->
                 <div id="cmt" class="carousel slide" data-bs-ride="carousel">
 
@@ -232,6 +234,22 @@
                     <span>9,0</span>
                 </div>
                 <hr>
+
+                <div class="container">
+                    <span class="text-success">Khách nói gì về kỳ nghỉ của họ
+                    </span>
+                    <div class="comment row">
+                        <p class="col-md-5">Bữa Sáng Ngon (2)</p>
+                        <p class="col-md-5">Phòng Sạch (12)</p>
+                        <p class="col-md-6">Nhân Viên Thân Thiện (20)</p>
+                        <p class="col-md-5">Dịch Vụ Xuất Sắc (2)</p>
+                    </div>
+                </div>
+                <hr>
+
+                <div class="container text-center ">
+                    <button type="button" class="btn booking-now">Đặt Ngay</button>
+                </div>
             </div>
 
         </div>
