--- a/app/templates/booking.html
+++ b/app/templates/booking.html
@@ -3,8 +3,6 @@
 {% block title %}Booking{% endblock %}
 {% block js %}
 <script src="{{ url_for('static', filename='js/checkOutDate.js') }}"></script>
-<script src="{{ url_for('static', filename='js/countTicket.js') }}"></script>
-<script src="{{ url_for('static', filename='js/countdown.js') }}"></script>
 {% endblock %}
 
 {% block content %}
@@ -178,7 +176,7 @@
                                     <h3>320.000 VND</h3>
                                     <span class="text-small">Đã bao gồm thuế và phí</span>
                                     <hr>
-                                    <input type="button" value="Đặt phòng" name="booking" class="btn btn-success" />
+                                    <input type="button" value="Chọn phòng" name="booking" class="btn btn-success" />
                                 </div>
                             </div>
                         </div>
@@ -251,7 +249,7 @@
                                     <h3>320.000 VND</h3>
                                     <span class="text-small">Đã bao gồm thuế và phí</span>
                                     <hr>
-                                    <input type="button" value="Đặt phòng" name="booking" class="btn btn-success" />
+                                    <input type="button" value="Chọn phòng" name="booking" class="btn btn-success" />
                                 </div>
                             </div>
                         </div>
@@ -324,7 +322,7 @@
                                     <h3>320.000 VND</h3>
                                     <span class="text-small">Đã bao gồm thuế và phí</span>
                                     <hr>
-                                    <input type="button" value="Đặt phòng" name="booking" class="btn btn-success" />
+                                    <input type="button" value="Chọn phòng" name="booking" class="btn btn-success" />
                                 </div>
                             </div>
                         </div>
